--- a/index.html
+++ b/index.html
@@ -1,45 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+    <title>Frontend Mentor | Four card feature section</title>
+  </head>
+  <body>
+    <main class="main-container">
+      <!-- Header Section -->
+      <section class="intro-section">
+        <h1 class="intro-heading-light">Reliable, efficient delivery</h1>
+        <h1 class="intro-heading-bold">Powered by Technology</h1>
+        <p class="intro-text">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </p>
+      </section>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+      <!-- Card Grid Section -->
+      <section class="card-section">
+        <div class="card card-supervisor">
+          <h3 class="card-title">Supervisor</h3>
+          <p class="card-description">
+            Monitors activity to identify project roadblocks
+          </p>
+          <img
+            src="./images/icon-supervisor.svg"
+            alt="Supervisor Icon"
+            class="card-icon"
+          />
+        </div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+        <div class="card card-team-builder">
+          <h3 class="card-title">Team Builder</h3>
+          <p class="card-description">
+            Scans our talent network to create the optimal team for your project
+          </p>
+          <img
+            src="./images/icon-team-builder.svg"
+            alt="Team Builder Icon"
+            class="card-icon"
+          />
+        </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+        <div class="card card-karma">
+          <h3 class="card-title">Karma</h3>
+          <p class="card-description">
+            Regularly evaluates our talent to ensure quality
+          </p>
+          <img
+            src="./images/icon-karma.svg"
+            alt="Karma Icon"
+            class="card-icon"
+          />
+        </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+        <div class="card card-calculator">
+          <h3 class="card-title">Calculator</h3>
+          <p class="card-description">
+            Uses data from past projects to provide better delivery estimates
+          </p>
+          <img
+            src="./images/icon-calculator.svg"
+            alt="Calculator Icon"
+            class="card-icon"
+          />
+        </div>
+      </section>
+    </main>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </p>
+    </footer>
+  </body>
 </html>
