--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+<link rel="stylesheet" href="index.css">
     <title>Frontend Mentor | Four card feature section</title>
   </head>
   <body>
@@ -83,7 +83,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="#">Itunumide</a>.
       </p>
     </footer>
   </body>
