--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
           <p class="card-description">
             Monitors activity to identify project roadblocks
           </p>
-          <img
-            src="./images/icon-supervisor.svg"
-            alt="Supervisor Icon"
-            class="card-icon"
-          />
+          <div class="image-container">
+            <img
+              src="./images/icon-supervisor.svg"
+              alt="Supervisor Icon"
+              class="card-icon"
+            />
+          </div>
         </div>
 
         <div class="card card-team-builder">
@@ -54,11 +56,13 @@
           <p class="card-description">
             Scans our talent network to create the optimal team for your project
           </p>
-          <img
-            src="./images/icon-team-builder.svg"
-            alt="Team Builder Icon"
-            class="card-icon"
-          />
+          <div class="image-container">
+            <img
+              src="./images/icon-team-builder.svg"
+              alt="Team Builder Icon"
+              class="card-icon"
+            />
+          </div>
         </div>
 
         <div class="card card-karma">
@@ -66,11 +70,13 @@
           <p class="card-description">
             Regularly evaluates our talent to ensure quality
           </p>
-          <img
-            src="./images/icon-karma.svg"
-            alt="Karma Icon"
-            class="card-icon"
-          />
+          <div class="image-container">
+            <img
+              src="./images/icon-karma.svg"
+              alt="Karma Icon"
+              class="card-icon"
+            />
+          </div>
         </div>
 
         <div class="card card-calculator">
@@ -78,11 +84,13 @@
           <p class="card-description">
             Uses data from past projects to provide better delivery estimates
           </p>
-          <img
-            src="./images/icon-calculator.svg"
-            alt="Calculator Icon"
-            class="card-icon"
-          />
+          <div class="image-container">
+            <img
+              src="./images/icon-calculator.svg"
+              alt="Calculator Icon"
+              class="card-icon"
+            />
+          </div>
         </div>
       </section>
     </main>
